--- a/Css/styles.css
+++ b/Css/styles.css
@@ -1,11 +1,13 @@
 /*font-family: 'Playfair Display', serif;
 font-family: 'Poppins', sans-serif;*/
 
-body{
-    background-color: purple;
-}
-h1{
- color: white;
- font-family: 'Playfair Display', serif;
- font-weight: bold;
-}
+h1 {
+    color: black;
+    font-family: "Playfair Display", serif;
+    font-weight: bold;
+  }
+  
+  p {
+    font-family: "Poppins", sans-serif;
+    font-weight: normal;
+  }
