Added about page

--- a/Css/styles.css
+++ b/Css/styles.css
@@ -94,3 +94,21 @@ padding: 15px 30px;
     text-align: center;
 }
   }
+
+  .about-section{
+    padding: 160px 20px;
+  }
+
+  .about-section h1 {
+    font-size: 64px;
+    line-height: 1.5;
+  }
+
+  .about-section h2{
+    font-size: 18px;
+    font-family: var(--default-font-family);
+    line-height: 1.5;
+  }
+  .about-section-content {
+margin: 30px;
+  }
