--- a/Css/styles.css
+++ b/Css/styles.css
@@ -95,20 +95,20 @@ padding: 15px 30px;
 }
   }
 
-  .about-section{
+  .content-container{
     padding: 160px 20px;
   }
 
-  .about-section h1 {
+  .content-container h1 {
     font-size: 64px;
     line-height: 1.5;
   }
 
-  .about-section h2{
+  .content-container h2{
     font-size: 18px;
     font-family: var(--default-font-family);
     line-height: 1.5;
   }
-  .about-section-content {
+  .content {
 margin: 30px;
   }
