--- a/Css/styles.css
+++ b/Css/styles.css
@@ -99,9 +99,9 @@ padding: 15px 30px;
     padding: 160px 20px;
   }
 
-  .content-container h1 {
+  .content h1 {
     font-size: 64px;
-    line-height: 1.5;
+    line-height: 80px;
   }
 
   .content-container h2{
@@ -111,4 +111,16 @@ padding: 15px 30px;
   }
   .content {
 margin: 30px;
+  }
+  .content h2{
+    font-size: 18px;
+    font-family: var(--default-font-family);
+  }
+  .content h3{
+    font-size: 24px;
+    line-height: 1.5;
+    font-family: var(--default-font-family);
+  }
+  .content p{
+    font-size: 14px;
   }
