--- a/Css/styles.css
+++ b/Css/styles.css
@@ -123,5 +123,36 @@ margin: 30px;
   }
   .content p{
     font-size: 14px;
-    
+
   }
+
+  nav{
+    padding: 40px;
+  }
+
+  nav a{
+    margin-left: 10px;
+    text-decoration: none;
+    color: #272142;
+  }
+  nav a:hover,  nav li.active a {
+    color: var(--branding-color);
+  }
+  nav li {
+    display: inline;
+    list-style: none;
+    line-height: 42px;
+    margin-left: 15px;
+  }
+
+  nav ul{
+    padding: 0;
+    margin: 0;
+  }
+  
+  .logo{
+    max-height: 40 px;
+  }
+
+
+
